--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,17 +61,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">about</a>
+            <li><a href="#demo">current problem</a>
             </li>
-            <li><a href="#features">features</a>
+            <li><a href="#about">about us</a>
             </li>
             <li><a href="#reviews">reviews</a>
-            </li>
-            <li><a href="#screens">screens</a>
-            </li>
-            <li><a href="#demo">demo</a>
-            </li>
-            <li><a class="getApp" href="#getApp">get app</a>
             </li>
             <li><a href="#support">support</a>
             </li>
@@ -130,6 +124,24 @@
   </header>
 
   <div class="wrapper">
+    <section id="demo">
+      <div class="container">
+        <div class="section-heading scrollpoint sp-effect3">
+          <h1>Current Problem</h1>
+          <div class="divider"></div>
+          <p>The current electricity issue</p>
+          <p>Only <b>23%</b> of Kenyans have electricity in 2015.</p>
+          <p>Zoom in to see where there is no electricity</p>
+        </div>
+        <div class="row">
+          <div class="col-md-10 scrollpoint col-md-offset-1 sp-effect2 active animated fadeInLeft">
+            <div class="video-container">
+              <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="about">
       <div class="container">
         <div class="section-heading scrollpoint sp-effect3">
@@ -137,7 +149,6 @@
           <div class="divider"></div>
           <p>Topility: Top up electricity: The chemical relationship between people and the structure to which they are attached</p>
         </div>
-
         <div class="row">
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="about-item scrollpoint sp-effect2">
@@ -170,25 +181,6 @@
         </div>
       </div>
     </section>
-    <section id="demo">
-      <div class="container">
-        <div class="section-heading scrollpoint sp-effect3">
-          <h1>Current Problem</h1>
-          <div class="divider"></div>
-          <p>The current electricity issue</p>
-          <p>Only <b>23%</b> of Kenyans have electricity in 2015.</p>
-          <p>Zoom in to see where there is no electricity</p>
-        </div>
-        <div class="row">
-          <div class="col-md-10 scrollpoint col-md-offset-1 sp-effect2 active animated fadeInLeft">
-            <div class="video-container">
-              <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="reviews">
       <div class="container">
         <div class="section-heading inverse scrollpoint sp-effect3">
@@ -276,7 +268,6 @@
         </div>
       </div>
     </section>
-
     <section id="support" class="doublediagonal">
       <div class="container">
         <div class="section-heading scrollpoint sp-effect3">
