--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,7 +99,7 @@
               Topicity:
             </div>
             <div class="tp-caption large_white_light sfr" data-x="770" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1400" data-easing="Power4.easeOut">
-              Kenyan
+              &nbsp;&nbsp; Kenyan
             </div>
             <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
               Smart Meter
@@ -136,7 +136,7 @@
         <div class="row">
           <div class="col-md-10 scrollpoint col-md-offset-1 sp-effect2 active animated fadeInLeft">
             <div class="video-container">
-              <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
+              <iframe src="http://darksitefinder.com/maps/world.html"></iframe>
             </div>
           </div>
         </div>
