--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -129,14 +129,14 @@
         <div class="section-heading scrollpoint sp-effect3">
           <h1>Current Problem</h1>
           <div class="divider"></div>
-          <p>The current electricity issue</p>
+          <p>Kenya's current electricity issue</p>
           <p>Only <b>23%</b> of Kenyans have electricity in 2015.</p>
-          <p>Zoom in to see where there is no electricity</p>
+          <p>Zoom in to see where there is noelectricity</p>
         </div>
         <div class="row">
           <div class="col-md-10 scrollpoint col-md-offset-1 sp-effect2 active animated fadeInLeft">
             <div class="video-container">
-              <iframe src="http://darksitefinder.com/maps/world.html"></iframe>
+              <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
             </div>
           </div>
         </div>
