--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
 
   <div class="pre-loader">
     <div class="load-con">
-      <img src="http://i.imgur.com/A2nKjuJ.png" class="animated fadeInDown" alt="">
+      <img src="http://i.imgur.com/F1vGrZ5.png" class="animated fadeInDown" alt="">
       <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
@@ -53,7 +53,7 @@
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
           <a class="navbar-brand" href="layout.ejs">
-            <img src="http://i.imgur.com/A2nKjuJ.png" alt="" class="logo">
+            <img src="http://i.imgur.com/F1vGrZ5.png" alt="" class="logo">
           </a>
         </div>
 
@@ -324,9 +324,7 @@
 
     <footer>
       <div class="container">
-        <a href="#" class="scrollpoint sp-effect3">
-          <img src="http://i.imgur.com/A2nKjuJ.png" alt="" class="logo">
-        </a>
+       
         <div class="social">
           <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
           <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
