--- a/views/userloggedin.ejs
+++ b/views/userloggedin.ejs
@@ -22,12 +22,6 @@
 
     <link rel="stylesheet" href="js/rs-plugin/css/settings.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/1.2.3/jquery.payment.min.js"></script>
-
-    <!-- If you're using Stripe for payments -->
-    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-    <script type="text/javascript" src="js/modernizr.custom.32033.js"></script>
 
     <link rel="stylesheet" href="css/eco.css">
     <style>
@@ -79,7 +73,7 @@
                             </li>
                             <li><a href="#reviews">Top up</a>
                             </li>
-                            <li><a class="getApp" href="#getApp">Log out</a>
+                            <li><a class="getApp" href="/">Log out</a>
                             </li>
 
                         </ul>
@@ -94,26 +88,35 @@
 
     <div class="wrapper">
 
-
-
         <section id="about">
-            <div class="container">
-
+          <div class="container">
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1>My electricity</h1>
-                    <h2>Used</h2>
                 </div>
-                <div class="animated fadeInUp">
-                  <div class="col-md-1 col-sm-1" >
-                  </div>
-                  <div class="col-md-10 col-sm-10" >
-                    <p class='rotate'> kW/hr</p>
-                    <canvas id="myChart" width="1000" height="400"></canvas>
-                  </div>
-                  <div class="col-md-1 col-sm-1" >
-                  </div>
+
+                <div>
+                    <div class="col-md-1 col-sm-1" ></div>
+                    <div class="col-md-10 col-sm-10" >
+
+                      <h2>24hr</h2>
+                      <p> kW/hr</p>
+                      <canvas id="dayChart" width="1000" height="400"></canvas>
+
+                      <br>
+
+
+                      <h2>Week</h2>
+                      <p class='rotate'> kW/hr</p>
+                      <canvas id="weekChart" width="1000" height="400"></canvas>
+
+                      <br>
+                      <h2>Year</h2>
+                      <p class='rotate'> kW/hr</p>
+                      <canvas id="yearChart" width="1000" height="400"></canvas>
+
+                    </div>
+                    <div class="col-md-1 col-sm-1" ></div>
                 </div>
-            </div>
         </section>
 
 
@@ -126,7 +129,7 @@
                   <h2>Current balence: <b>12</b> K</h2>
               </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-4">
+                    <div class="col-xs-12 col-md-12">
                         <div class="panel panel-default credit-card-box" id="rcorners1">
                             <div class="panel-heading display-table"  id="rcorners1" >
                                 <div class="row display-tr" >
@@ -206,7 +209,6 @@
                             </div>
                         </div>
                     </div>
-                    <div> Hello hello Hello</div>
                 </div>
             </div>
         </section>
@@ -225,7 +227,7 @@
         </footer>
 
     </div>
-    <script src="js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/placeholdem.min.js"></script>
@@ -233,7 +235,12 @@
     <script src="js/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/1.2.3/jquery.payment.min.js"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript" src="js/modernizr.custom.32033.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+    <script src='js/Chart.Scatter.js'></script>
     <script>
         $(document).ready(function() {
           appMaster.preLoader();
@@ -242,7 +249,7 @@
     </script>
     <script>
       $(document).ready(function() {
-        var ctx = document.getElementById("myChart").getContext("2d");
+        var ctx = document.getElementById("yearChart").getContext("2d");
         var data = {
             labels: [ "March", "April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February"],
             datasets: [
@@ -257,9 +264,61 @@
             ]
         };
         var myBarChart = new Chart(ctx).Bar(data);
-
-        $(this).scrollTop(0);
       });
+    </script>
+    <script>
+      $(document).ready(function() {
+        var ctwk = document.getElementById("weekChart").getContext("2d");
+        var data = {
+            labels: [ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+            datasets: [
+              {
+                  label: "My First dataset",
+                  fillColor: "rgba(220,220,220,0.5)",
+                  strokeColor: "rgba(220,220,220,0.8)",
+                  highlightFill: "rgba(220,220,220,0.75)",
+                  highlightStroke: "rgba(220,220,220,1)",
+                  data: [ 80, 81, 55, 40, 74, 42, 58]
+              },
+            ]
+        };
+        var myBarChart = new Chart(ctwk).Bar(data);
+      });
+    </script>
+    <script>
+      $(document).ready(function() {
+        dataUrl = 'api/data/all';
+        $.get( dataUrl, function( out ) {
+          var dataObj = [];
+          l = out[0].length;
+          for (i = 0; i < l; i++) {
+            var point = {
+              'x': out[1][i],
+              'y': out[0][i]
+            };
+            console.log(point);
+            dataObj.push(point);
+              //console.log((propt + ': ' + data[propt].time + ':' + data[propt].sound));
+          }
+          var ctd = document.getElementById("dayChart").getContext("2d");
+          var data5 = [{
+            label: '',
+            strokeColor: 'rgba(77, 180, 73, 0.3)',
+            xValueType: "dateTime",
+            data: dataObj
+          }];
+          var myBubbleChart = new Chart(ctd).Scatter(data5, {
+              bezierCurve: true,
+              showTooltips: true,
+              scaleShowHorizontalLines: true,
+              scaleShowLabels: true,
+              scaleBeginAtZero: true,
+              scaleType: "date",
+              datasetStroke: false
+          });
+
+          });
+        });
     </script>
 
 
