--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
 
   <div class="pre-loader">
     <div class="load-con">
-      <img src="http://i.imgur.com/F1vGrZ5.png" class="animated fadeInDown" alt="">
+      <img src="http://i.imgur.com/mlHg3UK.png" class="animated fadeInDown" alt="">
       <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
@@ -53,7 +53,7 @@
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
           <a class="navbar-brand" href="layout.ejs">
-            <img src="http://i.imgur.com/F1vGrZ5.png" alt="" class="logo">
+            <img src="http://i.imgur.com/mlHg3UK.png" alt="" class="logo">
           </a>
         </div>
 
@@ -75,7 +75,6 @@
       </div>
       <!-- /.container-->
     </nav>
-
 
     <!--RevSlider-->
     <div class="tp-banner-container">
