updated routes to use layout as home and rebranded logged in page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -52,7 +52,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
-          <a class="navbar-brand" href="layout.ejs">
+          <a class="navbar-brand" href="/">
             <img src="http://i.imgur.com/mlHg3UK.png" alt="" class="logo">
           </a>
         </div>
@@ -131,8 +131,8 @@
         </div>
         <div class="row">
           <div class="col-md-10 scrollpoint col-md-offset-1 sp-effect2 active animated fadeInLeft">
+            <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
             <div class="video-container">
-              <iframe src="http://darksitefinder.com/maps/world.html" style="display: block;"></iframe>
             </div>
           </div>
         </div>
@@ -323,7 +323,7 @@
 
     <footer>
       <div class="container">
-       
+
         <div class="social">
           <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
           <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
