--- a/views/userloggedin.ejs
+++ b/views/userloggedin.ejs
@@ -61,7 +61,7 @@
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
                         <a class="navbar-brand" href="index.html">
-                            <img src="img/eco/logo.png" alt="" class="logo">
+                          <img src="http://i.imgur.com/mlHg3UK.png" alt="" class="logo">
                         </a>
                     </div>
 
