updated branding on user pages and homepage link on layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,6 +69,9 @@
             </li>
             <li><a href="#support">support</a>
             </li>
+            <li><a class="getApp" href="/users">Log in</a>
+            </li>
+
           </ul>
         </div>
         <!-- /.navbar-collapse -->
