--- a/views/userloggedin.ejs
+++ b/views/userloggedin.ejs
@@ -40,16 +40,16 @@
 
 <body>
 
-    <div class="pre-loader">
-        <div class="load-con">
-            <img src="img/eco/logo.png" class="animated fadeInDown" alt="">
-            <div class="spinner">
-              <div class="bounce1"></div>
-              <div class="bounce2"></div>
-              <div class="bounce3"></div>
-            </div>
-        </div>
+  <div class="pre-loader">
+    <div class="load-con">
+      <img src="http://i.imgur.com/mlHg3UK.png" class="animated fadeInDown" alt="">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
     </div>
+  </div>
 
     <header>
 
